[project]
name = "pynenc"
version = "0.2.1"
description = "A task management system for complex distributed orchestration"
authors = [{ name = "Luis Diaz", email = "code.luis.diaz@proton.me" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["task", "orchestration", "workflow", "distributed", "python", "events"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "pyyaml>=6.0.1",
    "typing-extensions>=4.9.0",
    "cistell>=0.1.2",
    "croniter>=6.0.0",
    "jsonpickle>=4.1.0",
]

[project.optional-dependencies]
monitor = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.34.0",
]
tests = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.18.3",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.2.6",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.5.0",
    "types-requests>=2.32.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "psutil>=7.0.0",
]

[project.urls]
Homepage = "https://pynenc.org"
Documentation = "https://docs.pynenc.org"
Repository = "https://github.com/pynenc/pynenc"

[project.scripts]
pynenc = "pynenc.__main__:main"

[project.entry-points."pynenc.plugins"]
# Core pynenc doesn't register any plugins
# This section serves as documentation for plugin developers

[dependency-groups]
dev = [
    "black==23.11.0",
]
docs = [
    "sphinx>=8.0,<9",
    "myst-parser>=4.0",
    "furo>=2024",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.0",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinx-autodoc2>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pynenc", "pynmon", "pynenc_tests"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313', 'py314']
required-version = '23.11.0'
exclude = '''
/(
    \.mypy_cache
    | \.env
    | \.venv
)/
'''

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort # using isort for now
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
lint.ignore = [
    "E501", # line too long, handled by black
    # "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    # "W191", # indentation contains tabs
    "UP040", # type alias uses TypeAlias annotation instead of type keyword
    "UP046", # generic class uses Generic subclass instead of type parameters
    "UP047", # generic function should use type parameters
]

[tool.mypy]
files = ["pynenc"]
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = 'venv,env'
show_error_codes = true
pretty = true
allow_redefinition = true
no_implicit_optional = true
strict_equality = true

# Add mypy module configuration for croniter
[[tool.mypy.overrides]]
module = "croniter.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
log_cli = true
filterwarnings = [
    "ignore:Running in a secondary thread. Signal handling will be skipped.:UserWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# TO DEBUG pynmong let logs life in terminal and disable timeout
# addopts = "-s"  # Disable output capture so logs/prints appear live in terminal
timeout = 30

[tool.coverage.run]
source = [
    "pynenc",
    "pynmon",
]
omit = [
    "pynenc_tests/*",  # Exclude test files from coverage measurement
]
relative_files = true # to combine coverage data from multiple processes

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if (typing\\.)?TYPE_CHECKING:",
    "^\\s*\\.\\.\\.\\s*$",  # ... ellipsis
    "if __name__ == .__main__.:",
]
